--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-redux": "^9.1.0",
     "react-scripts": "5.0.1",
     "tailwind-scrollbar-hide": "^1.1.7",
+    "tailwindcss-spinner": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
